@@ -21,6 +21,7 @@ import io.netty.handler.ssl.SslContext;
 import io.netty.handler.timeout.ReadTimeoutHandler;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.hc.core5.net.URIBuilder;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -41,6 +42,7 @@ import org.thingsboard.rule.engine.credentials.BasicCredentials;
 import org.thingsboard.rule.engine.credentials.ClientCredentials;
 import org.thingsboard.rule.engine.credentials.CredentialsType;
 import org.thingsboard.server.common.data.StringUtils;
+import org.thingsboard.server.common.data.util.KeyValueEntry;
 import org.thingsboard.server.common.msg.TbMsg;
 import org.thingsboard.server.common.msg.TbMsgMetaData;
 import reactor.core.scheduler.Schedulers;
@@ -50,10 +52,12 @@ import reactor.netty.transport.ProxyProvider;
 
 import javax.net.ssl.SSLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
@@ -166,10 +170,6 @@ public class TbHttpClient {
                     SslContext sslContext = config.getCredentials().initSslContext();
                     httpClient = httpClient.secure(t -> t.sslContext(sslContext));
                 }
-            } else if (config.isUseSimpleClientHttpFactory()) {
-                if (CredentialsType.CERT_PEM == config.getCredentials().getType()) {
-                    throw new TbNodeException("Simple HTTP Factory does not support CERT PEM credentials!");
-                }
             } else {
                 SslContext sslContext = config.getCredentials().initSslContext();
                 httpClient = httpClient.secure(t -> t.sslContext(sslContext));
@@ -223,10 +223,7 @@ public class TbHttpClient {
     }
 
     EventLoopGroup getSharedOrCreateEventLoopGroup(EventLoopGroup eventLoopGroupShared) {
-        if (eventLoopGroupShared != null) {
-            return eventLoopGroupShared;
-        }
-        return this.eventLoopGroup = new NioEventLoopGroup();
+        return Objects.requireNonNullElseGet(eventLoopGroupShared, () -> this.eventLoopGroup = new NioEventLoopGroup());
     }
 
     private void checkSystemProxyProperties() throws TbNodeException {
@@ -341,8 +338,22 @@ public class TbHttpClient {
         boolean asyncStarted = false;
         try {
             String endpointUrl = TbNodeUtils.processPattern(config.getRestEndpointUrlPattern(), task.msg());
+
+            List<KeyValueEntry<String, String>> processedQueryParams;
+            if (config.getQueryParams() != null) {
+                processedQueryParams = config.getQueryParams().stream()
+                        .map(param -> {
+                            var processedParamName = TbNodeUtils.processPattern(param.key(), task.msg());
+                            var processedParamValue = TbNodeUtils.processPattern(param.value(), task.msg());
+                            return new KeyValueEntry<>(processedParamName, processedParamValue);
+                        })
+                        .toList();
+            } else {
+                processedQueryParams = null;
+            }
+
             HttpMethod method = HttpMethod.valueOf(config.getRequestMethod());
-            URI uri = buildEncodedUri(endpointUrl);
+            URI uri = buildEncodedUri(endpointUrl, processedQueryParams);
 
             RequestBodySpec req = webClient
                     .method(method)
@@ -352,7 +363,7 @@ public class TbHttpClient {
             if ((HttpMethod.POST.equals(method) || HttpMethod.PUT.equals(method) ||
                     HttpMethod.PATCH.equals(method) || HttpMethod.DELETE.equals(method)) &&
                     !config.isIgnoreRequestBody()) {
-                req.body(BodyInserters.fromValue(getData(task.msg(), config.isParseToPlainText())));
+                req.body(BodyInserters.fromValue(getRequestBody(task.msg())));
             }
 
             req.retrieve()
@@ -398,13 +409,13 @@ public class TbHttpClient {
         if (origin instanceof WebClientResponseException restClientResponseException
                 && restClientResponseException.getStatusCode().is2xxSuccessful()) {
             // return cause instead of original exception in case 2xx status code
-            // this will provide meaningful error message to the user
+            // this will provide a meaningful error message to the user
             return new RuntimeException(restClientResponseException.getCause());
         }
         return origin;
     }
 
-    public URI buildEncodedUri(String endpointUrl) {
+    public URI buildEncodedUri(String endpointUrl, List<KeyValueEntry<String, String>> queryParams) {
         if (endpointUrl == null) {
             throw new RuntimeException("Url string cannot be null!");
         }
@@ -412,7 +423,13 @@ public class TbHttpClient {
             throw new RuntimeException("Url string cannot be empty!");
         }
 
-        URI uri = UriComponentsBuilder.fromUriString(endpointUrl).build().encode().toUri();
+        URI uri;
+        if (queryParams != null) {
+            uri = buildEncodedUriNew(endpointUrl, queryParams);
+        } else {
+            uri = buildEncodedUriLegacy(endpointUrl);
+        }
+
         if (uri.getScheme() == null || uri.getScheme().isEmpty()) {
             throw new RuntimeException("Transport scheme(protocol) must be provided!");
         }
@@ -426,6 +443,51 @@ public class TbHttpClient {
         SsrfProtectionValidator.validateUri(uri);
 
         return uri;
+    }
+
+    private URI buildEncodedUriNew(String endpointUrl, List<KeyValueEntry<String, String>> queryParams) {
+        try {
+            URIBuilder builder = new URIBuilder(endpointUrl);
+            queryParams.forEach(param -> builder.addParameter(param.key(), param.value()));
+            return builder.build();
+        } catch (URISyntaxException e) {
+            throw new IllegalArgumentException(
+                    "Invalid request URL: '" + endpointUrl + "'. The URL must be valid and properly encoded. " +
+                            "If URL contains special characters (e.g., spaces), they must be percent-encoded (e.g., '/my device/' should be '/my%20device/').", e);
+        }
+    }
+
+    /**
+     * @deprecated Query params embedded in the URL string are not encoded correctly.
+     * <p>
+     * In query strings, {@code +} is interpreted as a space (URL form encoding),
+     * so {@code email=user+tag@test.com} becomes {@code email=user tag@test.com} on the server.
+     * <p>
+     * Pre-encoding the URL (e.g., {@code email=user%2Btag@test.com}) doesn't help
+     * because {@code .encode()} will double-encode it to {@code email=user%252Btag@test.com}.
+     * <p>
+     * Use {@link #buildEncodedUriNew} with a separate query params list,
+     * where values are encoded exactly once: {@code +} → {@code %2B}, {@code @} → {@code %40}.
+     */
+    @Deprecated(forRemoval = true)
+    private URI buildEncodedUriLegacy(String endpointUrl) {
+        return UriComponentsBuilder.fromUriString(endpointUrl).build().encode().toUri();
+    }
+
+    private Object getRequestBody(TbMsg msg) {
+        if (StringUtils.isNotBlank(config.getRequestBodyTemplate())) {
+            boolean escapeJson = !config.isParseToPlainText();
+            String processedTemplate = TbNodeUtils.processPattern(config.getRequestBodyTemplate(), msg, escapeJson);
+            if (config.isParseToPlainText()) {
+                return processedTemplate;
+            }
+            try {
+                return JacksonUtil.toJsonNode(processedTemplate);
+            } catch (Exception e) {
+                throw new RuntimeException("Request body template produced invalid JSON: " + processedTemplate, e);
+            }
+        }
+        return getData(msg, config.isParseToPlainText());
     }
 
     private Object getData(TbMsg tbMsg, boolean parseToPlainText) {
@@ -451,7 +513,7 @@ public class TbHttpClient {
         headers.forEach((key, values) -> {
             if (values != null && !values.isEmpty()) {
                 if (values.size() == 1) {
-                    consumer.accept(key, values.get(0));
+                    consumer.accept(key, values.getFirst());
                 } else {
                     consumer.accept(key, JacksonUtil.toString(values));
                 }
